[gd_scene load_steps=5 format=3 uid="uid://cc01gptkrf2ld"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_wfrot"]
[ext_resource type="Texture2D" uid="uid://cumdfls4d4825" path="res://Images/LA.png" id="2_frx3k"]
[ext_resource type="Texture2D" uid="uid://diy64ldkf288g" path="res://Images/RA.png" id="3_fci4i"]
[ext_resource type="Texture2D" uid="uid://dlctyqmhkgxnd" path="res://Images/DA.png" id="4_cx377"]

[node name="Player" type="Sprite2D"]
script = ExtResource("1_wfrot")

[node name="PlayerCamera" type="Camera2D" parent="."]

[node name="LB" type="Button" parent="PlayerCamera"]
offset_left = -563.0
offset_top = -54.0
offset_right = -455.0
offset_bottom = 54.0
icon = ExtResource("2_frx3k")

[node name="RB" type="Button" parent="PlayerCamera"]
offset_left = 453.0
offset_top = -50.0
offset_right = 561.0
offset_bottom = 58.0
icon = ExtResource("3_fci4i")

[node name="DB" type="Button" parent="PlayerCamera"]
offset_left = 456.0
offset_top = 187.0
offset_right = 564.0
offset_bottom = 295.0
icon = ExtResource("4_cx377")

[connection signal="pressed" from="PlayerCamera/LB" to="." method="_on_lb_pressed"]
[connection signal="pressed" from="PlayerCamera/RB" to="." method="_on_rb_pressed"]
[connection signal="pressed" from="PlayerCamera/DB" to="." method="_on_db_pressed"]
